--- a/Kubernetes/gke/postgres/volume_claim.yml
+++ b/Kubernetes/gke/postgres/volume_claim.yml
@@ -5,10 +5,8 @@ metadata:
   labels:
     type: local
 spec:
-  storageClassName: manual
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 2Gi
-  volumeName: postgres-pv
