--- a/Kubernetes/gke/postgres/deployment.yml
+++ b/Kubernetes/gke/postgres/deployment.yml
@@ -1,3 +1,16 @@
+kind: Service
+apiVersion: v1
+metadata:
+  name: postgres-service
+spec:
+  selector:
+    app: postgres-container
+  ports:
+    - protocol: TCP
+      port: 5432
+      targetPort: 5432
+
+adeiariasupv@cloudshell:~/proyecto/postgres (plasma-ripple-312206)$ cat deployment.yml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
