--- a/Kubernetes/postgres/deployment.yml
+++ b/Kubernetes/postgres/deployment.yml
@@ -14,7 +14,7 @@ spec:
         app: postgres-container
         tier: backend
     spec:
-      # Especificaciones del deployment
+      # Especificaciones del contenedor
       containers:
         - name: postgres-container
           # Qué imagen usar para la base de datos
@@ -42,7 +42,7 @@ spec:
           # Qué carpeta del volumen se usará para guardar la información
           volumeMounts:
             - name: postgres-volume-mount
-              mountPath: /var/lib/postgresql/data2
+              mountPath: /var/lib/postgresql/data
       # Qué volumen se usará para guardar toda la información
       volumes:
         - name: postgres-volume-mount
